--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "imask": "^6.0.7",
         "jquery": "^3.6.0",
         "litepicker": "^2.0.11",
-        "nouislider": "^15.2.0"
+        "nouislider": "^15.2.0",
+        "vanderlee-colorpicker": "^1.2.16"
     }
 }
